# minikernel.2024

./: .gitignore  CMakeLists.txt  README.md
HAL/: .HAL.c  HAL
kernel/: clock.c  exception.c  kernel  mutex.c  out.txt  process.c  sched.c  syscall.c  terminal.c
kernel/include/: clock.h  exception.h  mutex.h  process.h  sched.h  syscall.h  syscall_nr.h  terminal.h
user/: Makefile  creador_mut1  creador_mut2  creador_mut3  creador_mut4  creador_mut_error  dormilon  init  init.c  init_04.c  lanza  lector  lector2  locker1  locker1_int  locker2  locker2_int  locker3  mudo  simplon  yosoy  yosoy_largo
user/include/: services.h
user/lib/: services.c
